--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,23 +4,18 @@ spring:
   config:
     import:
       - classpath:/cloud.yml
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
   datasource:
-    url: jdbc:h2:mem:lastminute
-    username: tester
-    password: p@ssword
-    hikari:
-      driver-class-name: org.h2.Driver
-
+    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://mysql-db:3314/lastminute?
+#    username: root
+#    password: p@ssword
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.MySQL8Dialect
 
   servlet:
     multipart:
@@ -29,4 +24,6 @@ spring:
 
 logging:
   level:
-    org.hibernate.SQL: debug
+    org:
+      hibernate:
+        SQL: debug
