--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   mysql-db:
-#    platform: linux/amd64
+    platform: linux/amd64
     container_name: mysql-db
     image: mysql:8.0.33
     ports:
@@ -11,16 +11,16 @@ services:
       - mysql-data:/var/lib/mysql8
     environment:
       MYSQL_DATABASE: lastminute
-      MYSQL_USER: root
-      MYSQL_PASSWORD: p@ssword
+#      MYSQL_USER: root
+#      MYSQL_PASSWORD: p@ssword
       MYSQL_ROOT_PASSWORD: p@ssword
     networks:
       - spring-network
-    healthcheck:
-      test: ['CMD-SHELL', 'mysqladmin ping -h 127.0.0.1 -u root --password=$$MYSQL_ROOT_PASSWORD']
-      interval: 5s
-      timeout: 3s
-      retries: 20
+#    healthcheck:
+#      test: ['CMD-SHELL', 'mysqladmin ping -h 127.0.0.1 -u root --password=$$MYSQL_ROOT_PASSWORD']
+#      interval: 5s
+#      timeout: 3s
+#      retries: 20
     restart: always
 
   lastminute-app:
@@ -37,8 +37,9 @@ services:
       SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: org.hibernate.dialect.MySQL8Dialect
 #      SPRING_DATASOURCE_DRIVER-CLASS-NAME: com.mysql.cj.jdbc.Driver
     depends_on:
-      mysql-db:
-        condition: service_healthy
+      - mysql-db
+#      mysql-db:
+#        condition: service_healthy
     networks:
       - spring-network
 
