--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - "8080:8080"
     environment:
       MYSQL_HOST: mysql-db
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql-db/lastminute?
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql-db/lastminute?useSSL=false
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: p@ssword
       SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: org.hibernate.dialect.MySQL8Dialect
