--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.8'
 
 services:
   mysql-db:
-    platform: linux/amd64
-    container_name: mysql-db
+#    platform: linux/amd64
+#    container_name: mysql-db
     image: mysql:8.0.33
     ports:
       - "3309:3306"
@@ -27,14 +27,15 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
+    restart: always
     ports:
       - "8080:8080"
     environment:
-      MYSQL_HOST: mysql-db
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql-db/lastminute?
+#      MYSQL_HOST: mysql-db
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql-db:3306/lastminute?createDatabaseIfNotExist=true&autoReconnect=true
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: p@ssword
-      SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: org.hibernate.dialect.MySQL8Dialect
+#      SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: org.hibernate.dialect.MySQL8Dialect
 #      SPRING_DATASOURCE_DRIVER-CLASS-NAME: com.mysql.cj.jdbc.Driver
     depends_on:
       - mysql-db
