--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - "8080:8080"
     environment:
 #      MYSQL_HOST: mysql-db
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql-db:3306/lastminute?createDatabaseIfNotExist=true&autoReconnect=true
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql-db:3306/lastminute?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: p@ssword
 #      SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: org.hibernate.dialect.MySQL8Dialect
