--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,11 +11,12 @@ spring:
 #    password: p@ssword
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        dialect: org.hibernate.dialect.MySQLDialect
+    database-platform: org.hibernate.dialect.MySQL8Dialect
 
   servlet:
     multipart:
